--- a/app/assets/stylesheets/productsNew/_option.scss
+++ b/app/assets/stylesheets/productsNew/_option.scss
@@ -1,41 +1,65 @@
 *{
   box-sizing: border-box;
   font-size: 14px;
+  line-height: 40px;
   font-weight: bold;
-  a{
-    text-decoration: none;
+}
+a{
+  text-decoration: none;
+  color: inherit;
+}
+input{
+  -webkit-appearance: none;
+  border: 1px solid;
+  border-color: #ccc;
+  font-weight: normal;
+}
+textarea{
+  -webkit-appearance: none;
+  border: 1px solid;
+  border-color: #ccc;
+  font-weight: normal;
+}
+select{
+  -webkit-appearance: none;
+  border: 1px solid;
+  border-color: #ccc;
+  font-weight: normal;
+}
+.message{
+  // height: 24px;
+  // line-height: 24px;
+  &--gray{
+    color: gray;
   }
-  .message{
-    height: 24px;
-    line-height: 24px;
-
-  }
-  .btn{
+}
+.btn{
+  border-radius: 5px;
+  font-size: 12px;
+  height: 20px;
+  padding: 2px;
+  color: #ffffff;
+  &.free{
+    background-color: gray;
     border-radius: 5px;
-    font-size: 12px;
-    height: 20px;
-    padding: 2px;
-    color: #ffffff;
-    &.free{
-      background-color: gray;
-      border-radius: 5px;
-    }
-    &.need{
-      background-color: red;
-      border-radius: 5px;
-      
-    }
   }
-  .productsNewInput{
-    width: 100%;
-    height: 36px;
-    &--price{
-      width: 30%;
-    }
+  &.need{
+    background-color: red;
+    border-radius: 5px;
+    
   }
-  .box{
-    border: 1px solid;
-    border-color: #f8f8f8;
-    padding: 20px 30px;
+}
+.productsNewInput{
+  width: 100%;
+  padding: 0 16px;
+  border-radius: 4px;
+  margin: 12px 0 32px 0;
+  &--price{
+    width: 30%;
   }
+}
+.box{
+  border: 1px solid;
+  border-color: #f8f8f8;
+  padding: 20px 40px;
 }
